[workspace]
members = [
    "examples/rust-02-hello-cargo",
    "examples/rust-03-guessing-game",
    "examples/rust-04-variables",
    "examples/rust-05-primitive-types",
    "examples/rust-06-functions",
    "examples/rust-07-if",
    "examples/rust-08-loops",
    "examples/rust-09-vec",
    "examples/rust-10-ownership",
    "examples/rust-11-strings",
    "examples/rust-12-structs",
    "examples/rust-13-methods",
    "examples/rust-14-enums",
    "examples/rust-15-options",

    "tasks/rust-01-variables",
    "tasks/rust-02-primitive-types",
    "tasks/rust-03-functions",
    "tasks/rust-04-if",
    "tasks/rust-05-vectors",
    "tasks/rust-06-borrow-1",
    "tasks/rust-07-borrow-2",
    "tasks/rust-08-borrow-3",
    "tasks/rust-09-string-1",
    "tasks/rust-10-string-2",
    "tasks/rust-11-string-3",
    "tasks/rust-12-structs",
    "tasks/rust-13-methods",
    "tasks/rust-14-enums-1",
    "tasks/rust-15-enums-2",
    "tasks/rust-16-enums-3",
    "tasks/rust-17-comm",
    "tasks/rust-18-option-1",
    "tasks/rust-19-option-2",
    "tasks/rust-20-option-3",
    "tasks/rust-21-ini",
    "tasks/rust-22-lifetimes",
    "tasks/rust-23-traits-1",
    "tasks/rust-24-traits-2",
    "tasks/rust-25-traits-3",
    "tasks/rust-26-traits-4",
    "tasks/rust-27-traits-5",
    "tasks/rust-28-generics",
    "tasks/rust-29-lexer",
    "tasks/rust-29-trust",

    "extra/comm",
    "extra/polka",
    "extra/puzzle",
    "extra/bst",
]
